<resources>
    <string name="app_name">CamAI</string>
    <string name="app_tag_line"></string>

    <!--All data for ActivityMain.java -->
    <string name="str_instruction">Instruction</string>
    <string name="title_about">Developers</string>
    <string name="content_about">\nAhmad Shafique\nAhmed Zubair\nMuhammad Rizwan\nArsalan Younas</string>
    <string name="title_EI">Create an Enhanced Image</string>
    <string name="desc_EI">Creates an enhanced image having low noise and better sharpness from the provided image.</string>
    <string name="title_FF">Edit a Facial Feature</string>
    <string name="desc_FF">Edits facial feature using given styles in the provided image.</string>
    <string name="title_SM">Manipulate a Selfie</string>
    <string name="desc_SM">Manipulates parameters such as yaw, pitch and distance from camera in the provided image.</string>
    <string name="press_again_exit_app">Press again to exit</string>

    <!--All data ActivityFullScreenImage.java -->
    <string name="image_original">Original Image</string>
    <string name="image_processed">Processed Image</string>

    <!--All data for Other Activities -->
    <string name="camera_not_found">No camera on this device</string>
    <string name="select_image">Select an Image</string>
    <string name="image_preview">Preview Image</string>
    <string name="please_wait_text">Please wait while the image id processed…</string>
    <string name="final_output_image">Output Image</string>
    <string name="select_facial_features">Select Facial Features</string>
    <string name="select_fiducial_points">Select Fiducial Points</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>
    <string name="eye_left_right">Eye Left Right</string>
    <string name="head_up_down">Head Up Down</string>
    <string name="distance">Distance From Camera</string>
    <string name="sm_parameters">Input Parameters</string>
    <string name="distance_limit">200 to 500</string>
    <string name="head_eye_limit">-50 to 50</string>
    <string name="ff_options">Select an Option</string>
    <string name="young_ff">Young</string>
    <string name="old_ff">Old</string>
    <string name="bald_ff">Bald</string>
    <string name="hair_ff">Hair</string>
    <string name="image_enhancement">Image Enhancement</string>
    <string name="selfie_manipulation">Selfie Manipulation</string>
    <string name="facial_features">Facial Feature Editing</string>

    <!-- Other String -->
    <string name="title_get_image">Select Image Source</string>
    <string name="msg_get_image">Select camera to capture an image or use one from gallery</string>
    <string name="title_info">Information</string>
    <string name="title_no_internet">No Internet Connection</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="image_upload_failed">Failed to upload the image. Please try again later</string>
    <string name="image_upload_success">Image Uploaded Successfully</string>
    <string name="save_image">Save Image on Phone</string>
    <string name="processing">Processing…</string>
    <string name="failed">Failed</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_version">1.0</string>

    <!-- Http urls -->
    <string name="camai_face3d_azureweb_url">https://camai-face3d.azurewebsites.net</string>
    <string name="camai_transform_selfie_azureweb_url">https://camai-transform-selfie.azurewebsites.net</string>
    <string name="camai_transform_prnet_herokuapp_url">https://camai-transform-prnet.herokuapp.com</string>
    <string name="readFileURLs">false</string>
    <string name="camai_edit_facial_features_url">https://camai-facial-features.azurewebsites.net</string>
    <string name="camai_transform_selfie_url">https://camai-transform-selfie.azurewebsites.net</string>

    <string name="CAMERA">CAMERA</string>
    <string name="GALLERY">GALLERY</string>
    <string name="OK">OK</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="RETAKE">RETAKE</string>
    <string name="RESELECT">RESELECT</string>
    <string name="UPLOAD">UPLOAD</string>
    <string name="PROCESS">PROCESS</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="NO_IMAGE">NO IMAGE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="DISCARD">DISCARD</string>
    <string name="PREVIOUS">PREVIOUS</string>
    <string name="BACK">BACK</string>
    <string name="NEXT">NEXT</string>
    <string name="SKIP">SKIP</string>
    <string name="EMPTY"> </string>

</resources>
