<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dialog Title will be here"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_90" />
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="Content will be here"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_sm_edit_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <TextView
            android:id="@+id/tv_sm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/eye_left_right"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_sm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:hint="@string/head_eye_limit" />

        <TextView
            android:id="@+id/tv_sm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/head_up_down"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_sm2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:hint="@string/head_eye_limit" />

        <TextView
            android:id="@+id/tv_sm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_sm3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/distance_limit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingRight="@dimen/spacing_large">

        <Button
            android:id="@+id/bt_negative"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CANCEL"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_positive"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UPLOAD"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_90"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>